Fixed some css issues with infoBubble scrollbars

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -136,7 +136,7 @@ body, html{
          span {
             float: left;
             margin-right: 8px;
-            font-size: 20px;
+            font-size: 16px;
         }
 
         .loc {
@@ -145,8 +145,7 @@ body, html{
                 content: "\e618";
             }
 
-            p {
-                font-size: 12px;
+            p {                
                 padding: 0 15px;
             }
         }
@@ -156,8 +155,7 @@ body, html{
                 content: "\e645";
             }
 
-            p {
-                font-size: 12px;
+            p {                
                 padding: 0 15px;
             }
         }
@@ -167,8 +165,7 @@ body, html{
                 content: "\e705";
             }
 
-            a {
-                font-size: 12px;                
+            a {                
                 color: #E4E1E1;
             }
         }
